:bug: Add z-index to sticky header

--- a/assets/css/work3.css
+++ b/assets/css/work3.css
@@ -31,6 +31,7 @@ header {
     box-shadow: 0 1px 1px -1px rgba(0,0,0,0.6);
     position: sticky;
     top: 0;
+    z-index: 10;
 }
 
 .header-content {
